--- a/french-soup/index.html
+++ b/french-soup/index.html
@@ -4,18 +4,75 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>French Onion Soup Recipe</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    French Onion Soup We have been trying French onion soup in restaurants for years and my family and friends agree
-    none can compare to my recipe for taste and simplicity of preparation. Ingredients 1/2 cup unsalted butter 2
-    tablespoons olive oil 4 cups sliced onions 4 (10.5 ounce) cans beef broth 2 tablespoons dry sherry (optional) 1
-    teaspoon dried thyme salt and pepper to taste 4 slices French bread 4 slices provolone cheese 2 slices Swiss cheese,
-    diced 1/4 cup grated Parmesan cheese Directions Melt butter with olive oil in an 8 quart stock pot on medium heat.
-    Add onions and continually stir until tender and translucent. Do not brown the onions. Add beef broth, sherry and
-    thyme. Season with salt and pepper, and simmer for 30 minutes. Heat the oven broiler. Ladle soup into oven safe
-    serving bowls and place one slice of bread on top of each (bread may be broken into pieces if you prefer). Layer
-    each slice of bread with a slice of provolone, 1/2 slice diced Swiss and 1 tablespoon Parmesan cheese. Place bowls
-    on cookie sheet and broil in the preheated oven until cheese bubbles and browns slightly.
+    <!-- Header starts here -->
+    <header>
+      <h1>French Onion Soup</h1>
+    </header>
+    <!-- Header ends here -->
+
+     <!-- Section 1 begins here -->
+     <section class="recipe-start">
+      <div>
+        <br>
+        <p>
+          We have been trying French onion soup in restaurants for years and my family and friends agree none can compare to my recipe for taste and simplicity of preparation.
+        </p>
+        <br>
+        <img src="./images/recipe-info.png">
+        <br>
+      </div>
+      <hr> 
+      <!-- <hr> creates the solid divider line on page -->
+    </section>
+    <!-- Section 1 ends here -->
+    
+    <!-- Section 2 begins here -->
+    <section class="ingredients">
+      <h2>Ingredients</h2>
+      <br>
+      <div>
+        <ul>
+          <li>- 1/2 cup unsalted butter</li>
+          <li>- 2 tablespoons olive oil </li>
+          <li>- 4 cups sliced onions</li>
+          <li>- 4 (10.5 ounce) cans beef broth</li>
+          <li>- 2 tablespoons dry sherry (optional)</li>
+          <li>- 1 teaspoon dried thyme salt and pepper to taste</li>
+          <li>- 4 slices French bread</li>
+          <li>- 4 slices provolone cheese</li>
+          <li>- 2 slices Swiss cheese, diced</li>
+          <li>- 1/4 cup grated Parmesan cheese</li>
+        </ul>
+      </div>
+      <br>
+      <br>
+      <img src="./images/cooking-info.png">
+      <br>
+      <hr>
+    </section>
+    <!-- Section 2 ends here -->
+    
+    <!-- Section 3 begins here -->
+    <section class="cooking-instructions">
+      <h2>Directions</h2>
+      <br>
+      <div>
+        <ol>
+          <li>Directions Melt butter with olive oil in an 8 quart stock pot on medium heat. Add onions and continually stir until tender and translucent. Do not brown the onions. Add beef broth, sherry and thyme.</li>
+  
+          <li>Add beef broth, sherry and thyme. Season with salt and pepper, and simmer for 30 minutes.</li>
+  
+          <li>Heat the oven broiler.</li>
+
+          <li>Ladle soup into oven safe serving bowls and place one slice of bread on top of each (bread may be broken into pieces if you prefer). Layer each slice of bread with a slice of provolone, 1/2 slice diced Swiss and 1 tablespoon Parmesan cheese. Place bowls on cookie sheet and broil in the preheated oven until cheese bubbles and browns slightly.</li>
+        </ol>
+      </div>
+      <br>
+      <br>  
+    </section>
+    <!-- Section 3 ends here -->
   </body>
 </html>
